--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "node --max_old_space_size=8192 ./node_modules/@angular/cli/bin/ng build",
-    "serve": "node --max_old_space_size=8192 ./node_modules/@angular/cli/bin/ng serve",
+
+    "build": "node --max_old_space_size=8192 ./node_modules/@angular/cli/bin/ng build --prod",
+   // "serve": "node --max_old_space_size=8192 ./node_modules/@angular/cli/bin/ng serve",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
