--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio",
   "version": "0.0.0",
   "scripts": {
-    "ng": "node --max_old_space_size=4096 ./node_modules/.bin/ng"
+    "ng": "node --max_old_space_size=4096 ./node_modules/.bin/ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
