--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "node --max_old_space_size=4096 ./node_modules/.bin/ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "start": "node --max_old_space_size=4096 ./node_modules/.bin/ng serve",
+    "build": "node --max_old_space_size=4096 ./node_modules/.bin/ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
