--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "node --max_old_space_size=4096 ./node_modules/.bin/ng",
     "start": "node --max_old_space_size=4096 ./node_modules/.bin/ng serve",
-    "build": "node --max_old_space_size=4096 ./node_modules/.bin/ng build",
+    "build": "node --max_old_space_size=4096 ./node_modules/.bin/ng build --omit dev",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
