--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "node --max_old_space_size=8000 ./node_modules/.bin/ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "node --max_old_space_size=8000 ./node_modules/.bin/ng build",
     "watch": "ng build --watch --configuration development --omit dev",
     "test": "ng test"
   },
