--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "node --max_old_space_size=8000 ./node_modules/.bin/ng",
-    "start": "ng serve",
+    "start": "node --max_old_space_size=8000 ./node_modules/.bin/ng serve",
     "build": "node --max_old_space_size=8000 ./node_modules/.bin/ng build",
     "watch": "ng build --watch --configuration development --omit dev",
     "test": "ng test"
